# sampling

./: CMakeLists.txt  gemmbs.cu  generate_onnx.sh  run_sampling.sh
data/: inception.json  resnet101.json  resnet152.json  resnet50.json  vgg16.json  vgg19.json
src/lego/: CMakeLists.txt  buffer.h  main.cc  onnx_trt.cc  onnx_trt.h  onnx_trt_config.h  record.h  utils.h
torch2trt/: README.md  inception.py  inception_splited.py  main.py  resnet_50.py  vgg_splited.py
